--- a/events.html
+++ b/events.html
@@ -4,30 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/events.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/resetStyle.css">
+    <link rel="stylesheet" href="css/headerStyle.css">
+    <link rel="stylesheet" href="css/footerStyle.css">
     <title>MMU Event Organizer | Events</title>
+    <style>
+        .search{
+            margin-top: 60px;
+            text-align: center;
+        }
+        .search input#searchBar{
+            width: 95%;
+            height: 40px;
+            border-radius: 10px;
+            text-align: center;
+            display: inline-block;
+        }
+        .search img#searchIcon{
+            height: 40px;
+            cursor: pointer;
+            display: inline-block;
+            vertical-align: middle;
+        }
+        .search hr{
+            width: 98%;
+            margin: 10px auto;
+            height: 3px;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="images/logo.png" alt="MMU Event Organizer">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="catalogue.html">E-Catalogue</a></li>
-                    <li><a href="events.html">Events</a></li>
-                    <li><a href="faqs.html">FAQs</a></li>
-                    <li><a href="aboutUs.html">About Us</a></li>
-                </ul>
-            </nav>
-            <img src="images/profile.png" alt="Profile" class="profile-icon" onclick="">
-        </div>
+        <img src="images/logo.png" alt="MMU Event Organizer" class="logo">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="catalogue.html">E-Catalogue</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="aboutUs.html">About Us</a></li>
+            </ul>
+        </nav>
+        <img src="images/profile.png" alt="Profile" class="profile-icon" onclick="">
+        <nav class="profile-nav">
+            <ul>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="login.html">Log Out</a></li>
+            </ul>
+        </nav>
     </header>
-    
+    <div class="search">
+        <input type="text" id="searchBar" placeholder="Search...">
+        <img src="images/searchIcon.png" alt="Search" id="searchIcon" onclick="searchEvents()">
+        <hr>
+    </div>
+    <div class="main">
+        <a>EVENTS GO HERE</a>
+    </div>
     <footer>
-
+        <h1>Connect With Us</h1>
+        <nav class="footer-nav">
+            <ul>
+                <li><img src="images/social/facebook.png" alt="Facebook"></li>
+                <li><img src="images/social/instagram.png" alt="Instagram"></li>
+                <li><img src="images/social/youtube.png" alt="Youtube"></li>
+                <li><img src="images/social/x.png" alt="X"></li>
+                <li><img src="images/social/tiktok.png" alt="TikTok"></li>
+                <li><img src="images/social/linkedin.png" alt="LinkedIn"></li>
+                <li><img src="images/social/flickr.png" alt="Flickr"></li>
+            </ul>
+        </nav>
+        <p>© 2020 MULTIMEDIA UNIVERSITY. ALL RIGHTS RESERVED.</p>
     </footer>
 </body>
 </html>
